added link to second bonus

--- a/functions/index.html
+++ b/functions/index.html
@@ -15,6 +15,7 @@
     <ul>
       <li><a href="part2/assignment.html">Assignment</a></li>
       <li><a href="part2/bonus.html">Bonus</a></li>
+      <li><a href="part2/bonuss.html">Bonus 2 - Sets</a></li>
     </ul>
   </body>
 </html>
